Upgrade build to Java 21